--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node app",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "environment": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Dan Picklo",
   "license": "ISC",
