--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Dan Picklo",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cat-me": "^1.0.3",
     "config": "^3.3.2",
@@ -22,7 +22,8 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
